--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -526,7 +526,7 @@
 	year = {1997},
 	month = {02},
 	pages = {81},
-	title = {Robust Statistics in SAR Image Processing},
+	title = {Robust Statistics in {SAR} Image Processing},
 	volume = {407}
 }
 @ARTICLE{Canny86,
@@ -4461,7 +4461,7 @@
 @ARTICLE{Cui2014,
 	author={S. Cui and G. Schwarz and M. Datcu},
 	journal={IEEE Geoscience and Remote Sensing Letters},
-	title={A Comparative Study of Statistical Models for Multilook SAR Images},
+	title={A Comparative Study of Statistical Models for Multilook {SAR} Images},
 	year={2014},
 	volume={11},
 	number={10},
@@ -4597,7 +4597,7 @@
 
 @article{Vijay2011,
 	author = {Kumar, V. and Venkataraman, G.},
-	title = {SAR interferometric coherence analysis for snow cover mapping in the western Himalayan region},
+	title = {{SAR} interferometric coherence analysis for snow cover mapping in the western Himalayan region},
 	journal = {International Journal of Digital Earth},
 	volume = {4},
 	number = {1},
@@ -4831,7 +4831,7 @@
 @ARTICLE{Planinsic2018,
 	author={P. Planinšič and D. Gleich},
 	journal={IEEE Geoscience and Remote Sensing Letters},
-	title={Temporal Change Detection in SAR Images Using Log Cumulants and Stacked Autoencoder},
+	title={Temporal Change Detection in {SAR} Images Using Log Cumulants and Stacked Autoencoder},
 	year={2018},
 	volume={15},
 	number={2},
@@ -5431,12 +5431,12 @@
 	pages={2632-2643},}
 
 @inproceedings{Penna2013,
-	title={Intensity SAR Image Denoising with Stochastic Distances Using Non-Local Means Filter},
+	title={Intensity {SAR} Image Denoising with Stochastic Distances Using Non-Local Means Filter},
 	author={P. A. Penna and N. D. Mascarenhas},
 	year={2013},
 	month = {august},
 	booktitle = {Workshop of Works in Progress (WIP) in SIBGRAPI 2013 (XXVI Conference on Graphics, Patterns and Images)},
-	editor = {Alejandro C. Frery, Soraia Musse},
+	editor = {A. C. Frery, S. Musse},
 	address = {Arequipa, Peru},
 	url = {http://www.ucsp.edu.pe/sibgrapi2013/eproceedings/}
 }
@@ -5553,7 +5553,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 	author  = {M. L. Men\'endez and D. Morales and L. Pardo and M. Salicr\'u},
 	journal = {Applications of Mathematics},
 	pages   = {81--98},
-	title   = {($h$-$\phi$)-entropy differential metric},
+	title   = {($h$,$\phi$)-entropy differential metric},
 	volume  = {42},
 	year    = {1997},
 	number  = {2},
@@ -5620,7 +5620,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Akbarizadeh2012,  
 	author={G. {Akbarizadeh}},  
 	journal={IEEE Transactions on Geoscience and Remote Sensing},   
-	title={A New Statistical-Based Kurtosis Wavelet Energy Feature for Texture Recognition of SAR Images},   
+	title={A New Statistical-Based Kurtosis Wavelet Energy Feature for Texture Recognition of {SAR} Images},   
 	year={2012},  
 	volume={50},  
 	number={11},  
@@ -5643,7 +5643,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 
 @article{Zhang2019,
 	author = {A. Zhang and X. Yang and L. Jia and J. Ai and Z. Dong},
-	title = {SAR image classification using adaptive neighborhood-based convolutional neural network},
+	title = {{SAR} image classification using adaptive neighborhood-based convolutional neural network},
 	journal = {European Journal of Remote Sensing},
 	volume = {52},
 	number = {1},
@@ -5657,7 +5657,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 
 @article{Parikh2020,
 	author = { H. Parikh  and  S. Patel  and  V. Patel },
-	title = {Classification of SAR and PolSAR images using deep learning: a review},
+	title = {Classification of {SAR} and PolSAR images using deep learning: a review},
 	journal = {International Journal of Image and Data Fusion},
 	volume = {11},
 	number = {1},
@@ -5672,7 +5672,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Fernandez2017,
 	author={J. I. Fernández-Michelli and M. Hurtado and J. A. Areta and C. H. Muravchik},
 	journal={IEEE Geoscience and Remote Sensing Letters}, 
-	title={Unsupervised Polarimetric SAR Image Classification Using $\mathcal {G}_{p}^{0}$ Mixture Model}, 
+	title={Unsupervised Polarimetric {SAR} Image Classification Using $\mathcal {G}_{p}^{0}$ Mixture Model}, 
 	year={2017},
 	volume={14},
 	number={5},
@@ -5770,7 +5770,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Schou2003,
 	author={J. Schou and H. Skriver and A. A. Nielse and K. Conradsen},
 	journal={IEEE Transactions on Geoscience and Remote Sensing}, 
-	title={CFAR edge detector for polarimetric SAR images}, 
+	title={CFAR edge detector for polarimetric {SAR} images}, 
 	year={2003},
 	volume={41},
 	number={1},
@@ -5782,7 +5782,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Frery2019,
 	author={Frery, A. C.},
 	journal={Journal of Radars}, 
-	title={Stochastic contrastmeasures for SAR data: A survey}, 
+	title={Stochastic contrastmeasures for {SAR} data: A survey}, 
 	year={2019},
 	volume={8},
 	number={6},
@@ -5819,7 +5819,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Zhang2011,  
 	author={W. G. Zhang and Q. Zhang},  
 	journal={Electronics Letters},   
-	title={SAR image despeckling combining target detection with improved nonlocal means},   
+	title={{SAR} image despeckling combining target detection with improved nonlocal means},   
 	year={2011},  
 	volume={47},  
 	number={12},  
@@ -5828,14 +5828,14 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Rodrigues2016,
 	author={F. A. {\'A}vila Rodrigues and J. F. Rocha Neto and R. C. Pinheiro Marques and F. N. Sombra de Medeiros and J. Santos Nobre},
 	journal={IEEE Geoscience and Remote Sensing Letters}, 
-	title={SAR Image Segmentation Using the Roughness Information}, 
+	title={{SAR} Image Segmentation Using the Roughness Information}, 
 	year={2016},
 	volume={13},
 	number={2},
 	pages={132-136},}
 
 @article{Torres2013,
-	title={SAR Image Despeckling Algorithms using Stochastic Distances and Nonlocal Means},
+	title={{SAR} Image Despeckling Algorithms using Stochastic Distances and Nonlocal Means},
 	author={L. Torres and A. C. Frery},
 	journal={ArXiv},
 	year={2013},
@@ -5857,7 +5857,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Nobre2016,  
 	author={R. H. Nobre and F. A. A. Rodrigues and R. C. P. Marques and J. S. Nobre and J. F. S. R. Neto and F. N. S. Medeiros},  
 	journal={IEEE Signal Processing Letters},   
-	title={SAR Image Segmentation With Rényi's Entropy},   
+	title={{SAR} Image Segmentation With Rényi's Entropy},   
 	year={2016},  
 	volume={23},  
 	number={11},  
