--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -5657,7 +5657,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 
 @article{Parikh2020,
 	author = { H. Parikh  and  S. Patel  and  V. Patel },
-	title = {Classification of {SAR} and PolSAR images using deep learning: a review},
+	title = {Classification of {SAR} and {P}ol{S}AR images using deep learning: a review},
 	journal = {International Journal of Image and Data Fusion},
 	volume = {11},
 	number = {1},
@@ -5703,7 +5703,7 @@ url     = {https://projecteuclid.org:443/euclid.adjm/1545361441},
 @ARTICLE{Frery2012,	
 	author={A. C. Frery and R. J. Cintra and A. D. Nascimento},	
 	journal={IEEE Transactions on Geoscience and Remote Sensing}, 	
-	title={Entropy-Based Statistical Analysis of PolSAR Data}, 	
+	title={Entropy-Based Statistical Analysis of {P}ol{S}AR Data}, 	
 	year={2013},	
 	volume={51},	
 	number={6},	
