--- a/Projects/UNGS2020/proyectoSAR_3.tex
+++ b/Projects/UNGS2020/proyectoSAR_3.tex
@@ -57,7 +57,8 @@ Esta propuesta se abordará  estudiando la eficacia que tienen las medidas de di
 %sensores instalados en plataformas espaciales o aerotransportadas.
 
 %%% ACF Acá asociás clasificación a textura, en general. La clasificación, en general, trata de discriminar áreas con atributos diferentes. La textura entra después que presentes SAR, y digas que es sensible a la textura.
-El problema de clasificación de una zona de una superficie terrestre en clases con \textcolor{red}{diferentes atributos} es uno de los objetivos fundamentales en teledetección debido a que esto posibilita detectar zonas de inundación, de incendios, de derrame de petróleo tan importantes en el monitoreo ambiental. Por este motivo el desarrollo de algoritmos de clasificación y de interpretación automática de imágenes cobra vital importancia  ya que permite determinar áreas en la imagen con características comunes  y producir un mapa temático de la región. 
+El problema de clasificación de una zona de una superficie terrestre en clases es uno de los objetivos fundamentales en teledetección debido a que esto posibilita detectar zonas de inundación, de incendios, de derrame de petróleo tan importantes en el monitoreo ambiental. 
+Por este motivo el desarrollo de algoritmos de clasificación y de interpretación automática de imágenes cobra vital importancia  ya que permite determinar áreas en la imagen con características comunes  y producir un mapa temático de la región. 
 
 %Los algoritmos de clasificación pueden dividirse en no supervisados y supervisados. En los primeros no se necesita que el algoritmo interactúe con el usuario ya que éste realiza una búsqueda automática de grupos con características semejantes dentro de la imagen. Los segundos requieren de muestras de entrenamiento definidas por el usuario donde se conoce la clase a la cual pertenecen. Estas muestras serán utilizadas para asignar píxeles con clasificación desconocida. En ambos algoritmos la extracción de características que permitan una clasificación precisa juega un rol de suma importancia.
 \textcolor{red}{Las imágenes adquiridas con radares de apertura sintética (SAR) juegan un papel preponderante en el sensado remoto debido a sus ventajas respecto de las adquiridas por sensores ópticos. La independencia de las condiciones climáticas y de la iluminación junto con la capacidad de penetrar la nubes, las copas de los árboles e incluso el suelo, han contribuido para que resulten cada vez más populares. }
@@ -65,7 +66,11 @@ El problema de clasificación de una zona de una superficie terrestre en clases 
 En particular, en Argentina la Comisión Nacional de Actividades Espaciales y el INVAP junto con otras agencias internacionales, forman parte de la misión SAOCOM. Esta misión consiste en la puesta en órbita de satélites equipados con tecnología para adquirir imágenes SAR con el objetivo de medir de la humedad del suelo, detectar derrames de hidrocarburos en el mar y el seguimiento de la cobertura de agua en las inundaciones. }
 
 \textcolor{red}{
-Sin embargo, este tipo de imágenes tienen la desventaja de ser difíciles de interpretar y procesar por la presencia del ruido speckle. Este ruido es inherente al proceso de captura de la imagen y se hace presente debido a la superposición coherente de las ondas reflejadas por muchos dispersores. Esto causa una variación en la intensidad píxel a píxel que se manifiesta en la imagen como un patrón granular dificultando su análisis e interpretación. Por este motivo la utilización de modelos estadísticos y el desarrollo de nuevos métodos de clasificación, de filtrado y de interpretación automática de imágenes SAR se convierte en una herramienta esencial para describir este tipo de datos con precisión.}
+Sin embargo, este tipo de imágenes tiene la desventaja de ser difícil de interpretar y procesar por la presencia del ruido speckle. 
+Este ruido es inherente al proceso de captura de la imagen y se hace presente debido a la superposición coherente de las ondas reflejadas por muchos dispersores. Esto causa una variación en la intensidad píxel a píxel que se manifiesta en la imagen como un patrón granular que dificulta su análisis e interpretación. 
+Por este motivo la utilización de modelos estadísticos y el desarrollo de nuevos métodos de clasificación, de filtrado y de interpretación automática de imágenes SAR se convierte en una herramienta esencial para describir y analizar este tipo de datos.}
+
+En particular, destacamos que las imágenes SAR son sensibles a las características dieléctricas y a la textura del blanco.
 
 Entre los modelos inicialmente considerados para describir datos SAR están los llamados ``modelos empíricos'' que proponen distribuciones conocidas tales como Exponencial, Gamma, Lognormal, Rayleig, Weibull entre otras. Se pueden ver detalles y referencias de estos modelos en los trabajos de Frery y Wu \cite{FreryLibro2019}, Oliver y Quegan~\cite{oliverquegan98}, Yanasse et al.~\cite{Yanasse93} y Lee y Pottier~\cite{Lee2009}. 
 Sin embargo, ninguno de estos tiene la capacidad de modelar adecuadamente regiones con diferente grado de textura.
@@ -105,10 +110,15 @@ Estas medidas también se emplearon en el contexto de estimación de parámetros
 De forma análoga a las $(h,\phi)$ divergencias se definen las $(h,\phi)$ entropías propuestas por Salicrú et al.~\cite{salicruetal1993}. Estas medidas generalizan el concepto de entropía definido por Shannon~\cite{Shannon1948}, han sido estudiadas en Menéndez et al. ~\cite{Menendez1997} y en Pardo~\cite{pardo2005statistical} entre otros autores y  ampliamente utilizadas en el análisis de imágenes SAR. En Frery et al.~\cite{Frery2012} los autores encontraron expresiones explícitas para la entropía de Shannon y de Rényi para imágenes polarimétricas y proponen medidas de contrastes basados en estas entropías. 
 %Diferentes autores han estudiado estas medidas, en Pardo~\cite{pardo2005statistical} y en Basu et al.~\cite{Basu2011} se puede encontrar un exhaustivo estudio de las mismas. 
 
-Los algoritmos de clasificación y segmentación pueden ser muy sensibles al ruido de la imagen, en particular, para el caso de imágenes con ruido speckle como son las imágenes SAR. Por este motivo se han empleado diferentes estrategias de clasificación y segmentación para tratar con este ruido. En particular tanto las $(h,\phi)$ divergencias como las $(h,\phi)$ entropías han sido utilizadas con este fin. Carvalho et al.~\cite{Carvalho2019} implementaron algoritmos utilizando el conocido K-means junto con distancias estocásticas como medida de disimilaridad en imágenes PolSar. En~\cite{Fernandez2017} los autores aplicaron este tipo de clasificación basado en el algoritmo EM también en imágenes polarimétricas. En Nobre et al.~\cite{Nobre2016} los autores emplearon la matriz de entroía de Rényi para datos SAR en formato amplitud, como variable de entrada en métodos de segmentación. En Ferreira et al.~\cite{Ferreira2020} se propone un nuevo método de segmentación para imágenes SAR polarimétricas basado en la entropía de Shannon~\cite{Shannon1948}.   
+Los algoritmos de clasificación y segmentación pueden ser muy sensibles al ruido de la imagen, en particular, para el caso de imágenes con ruido speckle como son las imágenes SAR. Por este motivo se han empleado diferentes estrategias de clasificación y segmentación para tratar con este ruido. En particular tanto las $(h,\phi)$ divergencias como las $(h,\phi)$ entropías han sido utilizadas con este fin. Carvalho et al.~\cite{Carvalho2019} implementaron algoritmos utilizando el conocido K-means junto con distancias estocásticas como medida de disimilaridad en imágenes PolSAR. 
+Fernández-Michelli et al.~\cite{Fernandez2017} aplicaron este tipo de clasificación basado en el algoritmo EM también en imágenes polarimétricas. 
+Nobre et al.~\cite{Nobre2016} emplearon la matriz de entroía de Rényi para datos SAR en formato amplitud, como variable de entrada en métodos de segmentación. 
+Ferreira et al.~\cite{Ferreira2020} propusieron un nuevo método de segmentación para imágenes SAR polarimétricas basado en la entropía de Shannon~\cite{Shannon1948}.   
 
 
-En cuanto a algoritmos de clasificación supervisada Akbarizadeh~\cite{Akbarizadeh2012} aplicó el algoritmo Support Vector Machine (SVM) para clasificar una imagen SAR utilizando una nueva función de energía empleando transformada wavelets. En Palacio et al.~\cite{Palacio2019} los autores combinaron la utilización de filtros con el algoritmo SVM en imágenes SAR polarimétricas para cuantificar el contenido de información basado en la precisión de la clasificación.  Una revisión de estos métodos de clasificación para imágenes SAR se puede encontrar en~\cite{Parikh2020}. 
+En cuanto a algoritmos de clasificación supervisada, Akbarizadeh~\cite{Akbarizadeh2012} aplicó el algoritmo Support Vector Machine (SVM) para clasificar una imagen SAR utilizando una nueva función de energía empleando transformada wavelets. 
+Palacio et al.~\cite{Palacio2019} combinaron la utilización de filtros con el algoritmo SVM en imágenes SAR polarimétricas para cuantificar el contenido de información basado en la precisión de la clasificación.  
+Una revisión de estos métodos de clasificación para imágenes SAR se puede encontrar en~\cite{Parikh2020}. 
 
 
 %En el contexto de clasificación y segmentación de imágenes SAR Rodriguez et al~\cite{Rodrigues2016} emplearon un mapa de rugosidad (mapa de alfa) del modelo $\mathcal{G}^0$, estimando el parámetro de textura con el método LC y utilizando este mapa como entrada para métodos de segmentación de una imagen SAR monopolarimétrica modelada con la familia de distribuciones $\mathcal{G}^0$. 
@@ -148,7 +158,7 @@ En cuanto a algoritmos de clasificación supervisada Akbarizadeh~\cite{Akbarizad
 
 %\citet{KullbackLeibler1951} (KL) estaban interesados en proponer una medida que discrimine dos poblaciones, considerando una cantidad que involucre medidas de informaci\'on. Su inter\'es era definir una magnitud que indique la diferencia entre dos funciones de distribuci\'on pensando en una generalizaci\'on de la entrop\'ia de Shannon. Si $p(x)$ y $q(x)$ son dos funciones de probabilidad puntual con el mismo soporte $\Omega$, la KL divergencia se define como $d_{\text{\tiny{KL}}}(p \rVert q)=-\sum_{x \in \Omega} p(x) \log \dfrac{q(x)}{p(x)}=\sum_{x \in \Omega} p(x) \log\dfrac{p(x)}{q(x)}$. 
 
-
+%%% ACF Citá el artículo en periódico de Buades
 La formulación de nuevos métodos de filtrado de imágenes es un tema que está en continuo crecimiento, en particular para el caso donde el ruido no es gaussiano ni aditivo como es el ruido speckle. Los algoritmos NonLocalMeans (NLM), que inicialmente fueron propuestos por Buades et al.~\cite{Buades2005} en el contexto de modelos con ruido gaussiano aditivo, utilizan la información que proveen los píxeles vecinos para estimar el valor del píxel en la imagen filtrada. 
 %El valor del píxel estimado se obtiene como un promedio ponderado donde el peso de cada píxel en la imagen original es proporcional a una medida de similitud entre los píxeles que se encuentran
 %un entorno ($E_1$) del píxel de referencia y los píxeles pertenecientes un entorno ($E_2$) de los alrededores de $E_1$. La figura~\ref{NLM} tomada de Penna et al.~\cite{Penna2013} muestra un esquema del funcionamiento de este algoritmo. 
@@ -160,7 +170,11 @@ La formulación de nuevos métodos de filtrado de imágenes es un tema que está
 %	\caption{Funcionamiento del algoritmo NLM}
 %\end{figure}
 
-Estos algoritmos proporcionan un marco general para el problema de reducción de este tipo de ruido dado que permiten proponer diferentes medidas de disimilaridad y diferentes pesos. En Penna et al.~\cite{Penna2013} los autores utilizaron la distancia de Kullback Leibler en imágenes SAR monopolarimétricas para datos de intensidad, en reemplazo de la distancia euclídea que se utiliza en el algoritmo NLM original. Esta idea fue tomada por Santos et al.~\cite{Santos2017} y los autores la aplicaron en imágenes de ultrasonido que también están afectadas por ruido speckle. En Xue et al.~\cite{Xue2013} los autores reemplazan a la función de peso en el algoritmo NLM original por una combinación lineal de funciones cosenos obteniendo un algoritmo más rápido. Un nuevo filtro basado en distancias estocásticas y test entre funciones de distribución fue propuesto por Torres et al.~\cite{Torres2012} para datos SAR de intensidad.
+Estos algoritmos proporcionan un marco general para el problema de reducción de este tipo de ruido dado que permiten proponer diferentes medidas de disimilaridad y diferentes pesos. 
+Penna et al.~\cite{Penna2013} utilizaron la distancia de Kullback-Leibler en imágenes SAR monopolarimétricas para datos de intensidad, en reemplazo de la distancia euclídea que se utiliza en el algoritmo NLM original. 
+Esta idea fue tomada por Santos et al.~\cite{Santos2017} y los autores la aplicaron en imágenes de ultrasonido que también están afectadas por ruido speckle. 
+Xue et al.~\cite{Xue2013} reemplazan a la función de peso en el algoritmo NLM original por una combinación lineal de funciones cosenos obteniendo un algoritmo más rápido. 
+Un nuevo filtro basado en distancias estocásticas y test entre funciones de distribución fue propuesto por Torres et al.~\cite{Torres2012} para datos SAR de intensidad.
 
 El escenario planteado deja abierta la posibilidad de proponer distintas características de la imagen que sirvan de input para los algoritmos. En este proyecto se estudiará la capacidad que tienen las medidas que provienen de la teoría de la información como atributos de una imagen SAR en el contexto del diseño de nuevos métodos de filtrado y de clasificación de imágenes SAR.
 
@@ -215,9 +229,10 @@ Esta propuesta de investigación tiene por objetivos específicos:
 \textcolor{red}{
 La clase de las $(h,\phi)$-entropías de una variable aleatoria $Z$ con función de densidad dada por $f_{Z}(z ; \boldsymbol{\theta})$ se definen como
 \begin{align*}
-H_{\phi}^{h}(\boldsymbol{\theta})=h\left(\int_{\mathcal{A}} \phi\left(f_{Z}(z ; \boldsymbol{\theta})\right) \mathrm{d} z\right)
+H_{\phi}^{h}(\boldsymbol{\theta})=h\left(\int_{\mathcal{A}} \phi\left(f_{Z}(z ; \boldsymbol{\theta})\right) \mathrm{d} z\right),
 \end{align*}
-donde o bien se considera $\phi:[0, \infty) \rightarrow \mathbb{R}$ una función cóncava y $h: \mathbb{R} \rightarrow \mathbb{R}$ creciente, o $\phi$ convexa y $h$ decreciente. El cuadro~\ref{entropia} muestra algunas entropías presentadas en~\cite{Frery2019}.}
+donde o bien se considera $\phi\colon [0, \infty) \rightarrow \mathbb{R}$ una función cóncava y $h\colon \mathbb{R} \rightarrow \mathbb{R}$ creciente, o $\phi$ convexa y $h$ decreciente. 
+El cuadro~\ref{entropia} muestra algunas entropías presentadas en~\cite{Frery2019}.}
 
 \begin{table}[htb]
 	\caption{\label{entropia} $(h,\phi)$ entropías}
@@ -247,8 +262,11 @@ donde o bien se considera $\phi:[0, \infty) \rightarrow \mathbb{R}$ una función
 
 %Como se dijo anteriormente es importante obtener estimadores que tengan un comportamiento adecuado para muestras de pequeño y moderado tamaño tanto en sesgo, error cuadrático medio como en robustez. Tanto de los parámetros de la distribución como de los atributos de las imágenes. Esto es importante en el procesamiento de imágenes ya que muchos de los métodos de filtrado de imágenes, detección de bordes y clasificación utilizan máscaras deslizantes de tamaño $3 \times 3$,  $5 \times 5$, $7 \times 7$, $9 \times 9$ o $11 \times 11$. 
 
-\textcolor{red}{En  relación con el modelo multiplicativo se plantea que el retorno se modela como el producto de dos variables aleatorias independientes $X$ e $Y$, la primera corresponde al backscatter o retrodispersión y la segunda al ruido speckle. De esta forma $Z=X\cdot Y$ representa el retorno en cada pixel bajo el modelo multiplicativo.
-El ruido speckle $Y$, en formato intesidad, se modela por la distribución Gamma de parámetros $(L,L)$, donde con $L\geq 1$ es el número de looks que indica la realción señal/ruido de la imagen. El backscatter $X$ se describe por una distribución Gamma Inversa de parámetros $(-\alpha ,\gamma)$. De esta forma tenemos que $Z$ obedece una distribución $\mathcal G^0$ donde su función de densidad está dada por
+\textcolor{red}{En  relación con el modelo multiplicativo se plantea que el retorno se modela como el producto de dos variables aleatorias independientes $X$ e $Y$, la primera corresponde al backscatter o retrodispersión y la segunda al ruido speckle. 
+De esta forma $Z=X\cdot Y$ representa el retorno en cada pixel bajo el modelo multiplicativo.
+El ruido speckle $Y$, en formato intesidad, se modela por la distribución gama de media unitaria y parámetros $(L,L)$, donde con $L\geq 1$ es el número de looks que indica la relación señal/ruido de la imagen. 
+El backscatter $X$ se describe por una distribución gama Inversa de parámetros $(-\alpha ,\gamma)$. 
+De esta forma tenemos que $Z$ obedece una distribución $\mathcal G^0$ con función de densidad 	dada por
 \begin{equation*}
 f_{\mathcal{G}^{0}}( z) =\frac{L^{L}\Gamma ( L-\alpha
 	) }{\gamma ^{\alpha }\Gamma ( -\alpha ) \Gamma (
@@ -289,7 +307,8 @@ un entorno ($E_1$) del píxel de referencia y los píxeles pertenecientes a un e
 
 Se utilizarán los resultados obtenidos del estudio y análisis de los diferentes estimadores de la entropía para proponer una medida de similitud entre píxeles. Se comparará el desempeño de esta propuesta con las que existen en la literatura a través de diferentes medidas como las que se indican en~\cite{Frery2019}.
 
-Asimismo, algoritmos de clasificación tanto supervisados como no supervisados, serán estudiados para generar mapas temáticos de imágenes SAR utilizando medidas de disimilaridad en combinación con métodos de filtrado. Estos algoritmos serán comparados con los existentes en la literatura a través de diferentes indicadores como los son el índice Kappa y la matriz de confusión.
+Asimismo, serán estudiados algoritmos de clasificación tanto supervisados como no supervisados, para generar mapas temáticos de imágenes SAR utilizando medidas de \textcolor{red}{disimilaridad} en combinación con métodos de filtrado. 
+Estos algoritmos serán comparados con los existentes en la literatura a través de diferentes indicadores como los son el índice Kappa y la matriz de confusión.
 
 La efectividad de todos estos procedimientos será evaluada aplicándolos a imágenes reales.
 
